feat(groups): complete category management
